# StarPlusPlus

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Protos/: CMakeLists.txt  ServerStatus.proto
StarPPServer/: CMakeLists.txt  Main.cpp
StarPPServer/include/http/: Controller.h  Handler.h  LambdaHander.h
StarPPServer/include/util/: ServerStats.h
StarPPServer/src/: Main.cpp
StarPPServer/src/http/: Controller.cpp  LambdaHandler.cpp
StarPPServer/src/util/: ServerStats.cpp
StarPlusPLus/: CMakeLists.txt  Main.cpp
